--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,6 @@ h1 {
   width: 500px;
   height: 288px; /* Adjust height to match the textarea */
   padding: 10px;
-  
   font-size: 16px;
   box-sizing: border-box;
   white-space: pre-wrap; /* Preserve whitespace */
@@ -87,7 +86,7 @@ h1 {
 }
 
 .replace input {
-  width: 97.5%;
+  width: 100%;
   padding: 10px;
   font-size: 16px;
   margin-bottom: 10px;
@@ -103,7 +102,7 @@ h1 {
 
 .replace button {
   padding: 10px;
-  width: 99.9%;
+  width: 102.3%;
   font-size: 16px;
   background-color: #0c6c65;
   color: white;
@@ -201,13 +200,18 @@ h1 {
   border: none;
   color: white;
   background-color:#0c6c65;
-
   margin-top: 5px;
+  /* margin-left: .2rem; */
   padding: 12px 10px;
   border-radius: 5px;
   cursor: pointer;
   transition: .2s ease-in;
 }
+
+.btn-2 {
+  margin-left: 1rem;
+}
+
 .btn button:hover{
   background-color: #305b56;
 }
@@ -220,3 +224,34 @@ h1 {
 }
 
 
+
+footer {
+  width: 100%;
+  background-color: #0c6c65;
+  color: white;
+  text-align: center;
+  padding: 15px 0;
+  
+  font-size: 1rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
+}
+
+footer p {
+  margin: 0;
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  footer {
+      font-size: 0.9rem;
+      padding: 10px 0;
+  }
+}
+
+@media (max-width: 480px) {
+  footer {
+      font-size: 0.8rem;
+      padding: 8px 0;
+  }
+}
