--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
 }
 
 .main-container { 
-  height: 100vh; 
+  min-height: 100vh; 
   display: flex;
   flex-direction: column;
   align-items: center;
